--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
-        <title>Tropicali</title>
+        <title>Tropicali, new restaurant in Santa Fe</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="assets/css/app.css">
     </head>
     <body>
         <h1>Tropicali</h1>
